tests/NormalTests/paczka1/small_fuzzy/21694028.err
Error in line 1: NnWBHj22rz A54 86,9
Error in line 10: IwvLgle S267 87,1
